2009-06-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* type.h:
	* value.h:
	* cbinding.h:
	* type-generated.cpp: Regenerated.

	* downloader.h: Removed streaming_features, not used here anymore.

	* utils.cpp
	* enums.h:
	* playlist.cpp|h:
	* pipeline.cpp|h:
	* pipeline-asf.cpp|h:
	* mms-downloader.cpp|h: Implement support for server side playlists.

2009-06-02  Rolf Bjarne Kvinge  <RKvinge@novell.com>

	* pipeline.cpp: Check queued_requests for null after locking too.

2009-06-02  Alan McGovern  <amcgovern@novell.com>

	* runtime.cpp|h: Focus changed events are emitted synchronously right
	before a MouseLeftButtonDown or MouseRightButtonDown event.

2009-06-01  Chris Toshok  <toshok@ximian.com>

	* type.h.in|cpp (Types::RegisterType): permit a ctor_visible flag
	here too so xaml.cpp knows if the type is creatable.

	* type.h, cbinding.cpp|h: regen

2009-06-01  Chris Toshok  <toshok@ximian.com>

	* xaml.cpp (dependency_object_add_child): only do this check for
	non-Type::MANAGED children.

2009-06-01  Chris Toshok  <toshok@ximian.com>

	* grid.cpp|h: the row/columndefinitioncollections do not permit
	definitions to be inserted more than once.
	
	* type.h.in (class Type): add IsCtorVisible method and ctor arg.

	* type.h, type-generated.cpp: regen.

	* xaml.cpp (XamlElementInstanceNative::CreateItem): only create
	the instance if the ctor is visible.
	(dependency_object_add_child): if the ctor for the child isn't
	visible, error out even if it's the same type/kind as the
	property.

2009-06-01  Jeffrey Stedfast  <fejj@novell.com>

	* deployment.cpp (Dispose): Properly chain up to
	DependencyObject::Dispose().

	* bitmapimage.cpp (Dispose): Fixed Dispose chaining.

	* brush.cpp (ImageBrush::Dispose): Chain up to
	TileBrush::Dispose() instead of EventObject::Dispose(). Fixes a
	crash in GlyphsManagedDRT

	* dependencyobject.cpp (WildcardListener): Uh, this needs to
	subclass Listener or we can't go around casting it to a Listener.
	(CallbackListener): Same.
